style: fixed padding to navbar to make it more aligned with copy

--- a/public/sass/partials/nav.scss
+++ b/public/sass/partials/nav.scss
@@ -3,4 +3,8 @@
 ************************/
 .navbar{
   background-color: white;
+  padding-left:10%;
+}
+.navbar-right{
+  padding-right:10%;
 }
